--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
   <div class="card">
     <h1>🌐HYPΞRツ하이</h1>
     <a class="link" href="https://github.com/HYPER12755" target="_blank"><span class="emoji">🐙</span><span>GitHub: HYPER12755</span></a>
-    <a class="link" href="https://instagram.com/hyper_r7100" target="_blank"><span class="emoji">📸</span><span>Instagram: @hyper_r7100</span></a>
+    <a class="link" href="https://instagram.com/_nazmiforreal" target="_blank"><span class="emoji">📸</span><span>Instagram: _nazmiforreal</span></a>
     <a class="link" href="https://twitter.com/HYPER390961" target="_blank"><span class="emoji">🐦</span><span>Twitter (X): @HYPER390961</span></a>
     <a class="link" href="https://t.me/hyper_r7100" target="_blank"><span class="emoji">✈️</span><span>Telegram: @hyper_r7100</span></a>
-    <a class="link" href="https://t.me/hyper_rr7100" target="_blank"><span class="emoji">👥</span><span>Telegram channel</span></a>
+    <a class="link" href="https://t.me/hyper_rr7100" target="_blank"><span class="emoji">👥</span><span>Telegram channel: @hyper_r7100</span></a>
     <a class="link" href="https://discord.gg/gdd6cKMBbT" target="_blank"><span class="emoji">💬</span><span>Discord Server: Join here</span></a>
   </div>
 </body>
